# jvm

./: .gitattributes  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: completion.rs  config.rs  dirs.rs  init.rs  install.rs  jdk.rs  main.rs  switch.rs
tests/: integration.rs
