[package]
name = "jvm"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dirs = "6"
comfy-table = "7"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[target.'cfg(windows)'.dependencies]
junction = { version = "2.0.0", default-features = false }
